--- a/10.Model2MVCShop(Ajax)/WebContent/WEB-INF/web.xml
+++ b/10.Model2MVCShop(Ajax)/WebContent/WEB-INF/web.xml
@@ -37,6 +37,13 @@
     <servlet-name>action</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
+  
+  <session-config>
+  	<session-timeout>20</session-timeout>
+  </session-config>
+  
+  
+  
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
     <welcome-file>index.html</welcome-file>
